--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "docker-mock",
   "version": "0.0.8",
   "description": "Mock for Docker",
-  "main": "lib/index.js",
+  "ma
+in": "lib/index.js",
   "scripts": {
     "test": "mocha --bail --require should --reporter spec",
     "coverage": "mocha --bail --require blanket --require should --reporter html-cov > coverage.html",
