--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "docker-mock",
   "version": "0.0.8",
   "description": "Mock for Docker",
-  "ma
-in": "lib/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "mocha --bail --require should --reporter spec",
     "coverage": "mocha --bail --require blanket --require should --reporter html-cov > coverage.html",
