--- a/package.json
+++ b/package.json
@@ -30,19 +30,19 @@
   },
   "license": "MIT",
   "dependencies": {
-    "express": "^3.5.1",
-    "tar": "^0.1.19",
-    "middleware-flow": "~0.2.0",
+    "express": "~4.4.3",
+    "tar": "~0.1.19",
+    "middleware-flow": "~0.4.1",
     "lodash": "~2.4.1"
   },
   "devDependencies": {
-    "async": "^0.7.0",
+    "async": "~0.9.0",
     "blanket": "^1.1.6",
-    "dockerode": "^1.2.9",
+    "dockerode": "~2.0.0",
     "mocha": "^1.18.2",
     "request": "^2.34.0",
-    "should": "^3.3.0",
-    "tar-stream": "^0.3.2",
+    "should": "~4.0.4",
+    "tar-stream": "~0.4.2",
     "travis-cov": "^0.2.5"
   }
 }
