--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "express": "~4.4.3",
-    "tar": "~0.1.19",
-    "middleware-flow": "~0.4.1",
-    "lodash": "~2.4.1"
+    "express": "^4.6.1",
+    "lodash": "^2.4.1",
+    "middleware-flow": "^0.5.1",
+    "tar": "^0.1.20"
   },
   "devDependencies": {
     "async": "~0.9.0",
