--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "async": "~0.9.0",
     "blanket": "^1.1.6",
+    "body-parser": "^1.9.0",
     "dockerode": "~2.0.0",
     "mocha": "^1.18.2",
     "request": "^2.34.0",
