--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.2.1",
   "description": "Mock for Docker",
   "main": "lib/index.js",
-  "bin": "./lib/cli.js" ,
+  "bin": {
+    "docker-mock": "./bin/cli.js"
+  },
   "scripts": {
     "test": "mocha --bail --require should --reporter spec",
     "coverage": "mocha --bail --require blanket --require should --reporter html-cov > coverage.html",
