--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   "devDependencies": {
     "async": "~0.9.0",
     "blanket": "^1.1.6",
+    "callback-count": "^0.1.0",
+    "concat-stream": "^1.4.6",
     "dockerode": "~2.0.0",
     "mocha": "^1.18.2",
     "request": "^2.34.0",
