--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.9.0",
+    "duplex-emitter": "^2.1.2",
     "express": "^4.6.1",
     "lodash": "^2.4.1",
     "middleware-flow": "^0.5.1",
-    "tar": "^0.1.20",
-    "minimist": "~1.1.0"
+    "minimist": "~1.1.0",
+    "tar": "^0.1.20"
   },
   "devDependencies": {
     "JSONStream": "^0.9.0",
@@ -47,7 +48,6 @@
     "callback-count": "^0.1.0",
     "concat-stream": "^1.4.6",
     "dockerode": "~2.0.0",
-    "duplex-emitter": "^2.1.2",
     "mocha": "^1.18.2",
     "request": "^2.34.0",
     "should": "~4.0.4",
