--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "./node_modules/.bin/lab --verbose --coverage --threshold 95",
-    "lint": "./node_modules/.bin/jshint ."
+    "lint": "./node_modules/.bin/eslint ."
   },
   "keywords": [
     "docker",
@@ -22,13 +22,13 @@
   },
   "license": "MIT",
   "dependencies": {
+    "101": "^0.16.1",
     "body-parser": "^1.10.1",
     "duplex-emitter": "^2.1.2",
     "express": "^4.6.1",
-    "lodash": "^3.2.0",
     "middleware-flow": "^0.6.1",
     "minimist": "^1.1.0",
-    "tar": "^1.0.3"
+    "tar": "^2.1.0"
   },
   "devDependencies": {
     "JSONStream": "^0.10.0",
@@ -37,7 +37,7 @@
     "code": "^1.3.0",
     "concat-stream": "^1.4.7",
     "dockerode": "^2.0.6",
-    "jshint": "^2.6.0",
+    "eslint": "^0.19.0",
     "lab": "^5.2.1",
     "request": "^2.51.0",
     "tar-stream": "^1.1.2"
