--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "docker-mock": "./bin/cli.js"
   },
   "scripts": {
-    "test": "./node_modules/.bin/lab --verbose --coverage --threshold 95",
-    "lint": "./node_modules/.bin/eslint ."
+    "coverage": "lab --reporter lcov > codeclimate",
+    "test": "lab --verbose --coverage --threshold 95",
+    "lint": "eslint ."
   },
   "keywords": [
     "docker",
@@ -26,7 +27,7 @@
     "body-parser": "^1.10.1",
     "duplex-emitter": "^2.1.2",
     "express": "^4.6.1",
-    "middleware-flow": "^0.6.1",
+    "middleware-flow": "^0.7.0",
     "minimist": "^1.1.0",
     "tar": "^2.1.0"
   },
@@ -37,7 +38,7 @@
     "code": "^1.3.0",
     "concat-stream": "^1.4.7",
     "dockerode": "^2.0.6",
-    "eslint": "^0.19.0",
+    "eslint": "^0.20.0",
     "lab": "^5.2.1",
     "request": "^2.51.0",
     "tar-stream": "^1.1.2"
