--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.10.1",
     "duplex-emitter": "^2.1.2",
     "express": "^4.6.1",
+    "keypather": "^1.10.1",
     "middleware-flow": "^0.7.0",
     "minimist": "^1.1.0",
     "tar": "^2.1.0"
