--- a/package.json
+++ b/package.json
@@ -23,23 +23,23 @@
   },
   "license": "MIT",
   "dependencies": {
-    "101": "^0.16.1",
+    "101": "^1.0.0",
     "body-parser": "^1.10.1",
     "duplex-emitter": "^2.1.2",
     "express": "^4.6.1",
     "keypather": "^1.10.1",
-    "middleware-flow": "^0.7.0",
+    "middleware-flow": "^0.8.0",
     "minimist": "^1.1.0",
     "tar": "^2.1.0"
   },
   "devDependencies": {
-    "JSONStream": "^0.10.0",
-    "async": "~0.9.0",
+    "JSONStream": "^1.0.4",
+    "async": "^1.2.1",
     "callback-count": "^0.1.0",
     "code": "^1.3.0",
     "concat-stream": "^1.4.7",
     "dockerode": "^2.0.6",
-    "eslint": "^0.20.0",
+    "eslint": "^0.23.0",
     "lab": "^5.2.1",
     "request": "^2.51.0",
     "tar-stream": "^1.1.2"
