--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "keypather": "^1.10.1",
     "middleware-flow": "^0.8.0",
     "minimist": "^1.1.0",
+    "object-loops": "^0.2.0",
     "tar": "^2.1.0",
     "tar-stream": "^1.2.1"
   },
