--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "scripts": {
     "changelog": "github-changes -o Runnable -r docker-mock -a --only-pulls --use-commit-body --order-semver",
-    "coverage": "lab --reporter lcov --output lcov.info",
-    "unit": "lab --threshold 100 test/models test/utils",
-    "test": "lab --threshold 98",
-    "lint": "eslint ."
+    "coverage-check": "istanbul check-coverage && echo 'Coverage check successful!'",
+    "coverage": "istanbul cover ./node_modules/.bin/_mocha -- --recursive --reporter dot test/models test/utils && npm run coverage-check",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "lint": "eslint .",
+    "test": "NODE_ENV=test mocha --timeout 5000 --bail --recursive --reporter spec test/",
+    "unit": "NODE_ENV=test mocha --timeout 5000 --bail --recursive --reporter spec test/models test/utils"
   },
   "keywords": [
     "docker",
@@ -34,20 +36,22 @@
     "keypather": "^1.10.1",
     "middleware-flow": "^0.8.0",
     "minimist": "^1.1.0",
-    "object-loops": "^0.2.0",
+    "object-loops": "^0.3.1",
     "tar": "^2.1.0",
     "tar-stream": "^1.2.1"
   },
   "devDependencies": {
     "JSONStream": "^1.0.4",
     "async": "^1.2.1",
-    "code": "^1.3.0",
+    "chai": "^3.4.0",
+    "chai-as-promised": "^5.1.0",
     "concat-stream": "^1.4.7",
-    "cucumber": "^0.5.2",
+    "coveralls": "^2.11.4",
     "dockerode": "^2.2.2",
     "eslint": "^1.2.1",
     "github-changes": "^1.0.0",
-    "lab": "^5.2.1",
+    "istanbul": "^0.4.0",
+    "mocha": "^2.3.3",
     "request": "^2.51.0"
   }
 }
