--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ script:
   - npm run coverage
   - npm test
 after_script:
-  - codeclimate < ./coverage/lcov.info
+  - PATH=$NVM_BIN:$PATH codeclimate-test-reporter < ./coverage/lcov.info
