--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,13 @@ node_js:
   - "0.10"
   - "0.12"
   - "4"
+  - "5"
 sudo: false
 before_script:
   - npm install -g codeclimate-test-reporter
 script:
   - npm run lint
   - npm run coverage
-  - npm test
+  - npm run functional
 after_script:
   - PATH=$NVM_BIN:$PATH codeclimate-test-reporter < ./coverage/lcov.info
