--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "coverage-check": "istanbul check-coverage && echo 'Coverage check successful!'",
     "coverage": "istanbul cover ./node_modules/.bin/_mocha -- $npm_package_options_mocha test/models test/utils && npm run coverage-check",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "format": "standard --format .",
     "functional": "NODE_ENV=test mocha $npm_package_options_mocha test",
-    "lint": "eslint .",
+    "lint": "standard .",
     "test": "npm run lint && npm run unit && npm run functional",
     "unit": "NODE_ENV=test mocha $npm_package_options_mocha test/models test/utils"
   },
@@ -30,6 +31,16 @@
     "url": "https://github.com/Runnable/docker-mock"
   },
   "license": "MIT",
+  "standard": {
+    "globals": [
+      "describe",
+      "it",
+      "before",
+      "after",
+      "beforeEach",
+      "afterEach"
+    ]
+  },
   "dependencies": {
     "101": "^1.0.0",
     "bluebird": "^3.0.2",
@@ -52,10 +63,10 @@
     "concat-stream": "^1.4.7",
     "coveralls": "^2.11.4",
     "dockerode": "^2.2.2",
-    "eslint": "^1.2.1",
     "github-changes": "^1.0.0",
     "istanbul": "^0.4.0",
     "mocha": "^2.3.3",
-    "request": "^2.51.0"
+    "request": "^2.51.0",
+    "standard": "^5.3.1"
   }
 }
