--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ node_js:
   - "0.12"
   - "4"
   - "5"
+matrix:
+  allow_failures:
+    - node_js: "5"
 sudo: false
 before_script:
   - npm install -g codeclimate-test-reporter
